--- a/pages/index_questionnaire.html
+++ b/pages/index_questionnaire.html
@@ -127,7 +127,10 @@
     </div>
 </header>
 
-
+<h1 style='text-align: center;'>Main Conclusions</h1>
+<p style='position: relative;left:100px;width: 80%'>
+    TODO
+</p>
 <h1 style='text-align: center;'>Questionnaire Results</h1>
 <p style='position: relative;left:100px;width: 80%'>
     This page illustrates the results of the questionnaires collected by the test-subjects. <br> The questions denoted with <b>(Y/N)</b> are yes or no questions, <b>(MC)</b> are multiple-choice questions and the questions <b>(W)</b> are questions that
