--- a/pages/index_questionnaire.html
+++ b/pages/index_questionnaire.html
@@ -133,7 +133,7 @@
 </p>
 <h1 style='text-align: center;'>Questionnaire Results</h1>
 <p style='position: relative;left:100px;width: 80%'>
-    This page illustrates the results of the questionnaires collected by the test-subjects. <br> The questions denoted with <b>(Y/N)</b> are yes or no questions, <b>(MC)</b> are multiple-choice questions and the questions <b>(W)</b> are questions that
+    This section illustrates the results of the questionnaires collected by the test-subjects. <br> The questions denoted with <b>(Y/N)</b> are yes or no questions, <b>(MC)</b> are multiple-choice questions and the questions <b>(W)</b> are questions that
     were written answeres. The written answeres are evaluated by counting how often generalized keywords were mentioned. The explanation of every keyword is displays on the right of the bar charts on click on the bars.
     <br>Most charts show the option to view the results for all test-subjects (<b>All</b>) or grouped into single and pairs of test-subjects (<b>Single/Pairs</b>).
     <br> For the vertical bar chart, the y axis shos the frequency of the answers, given by the x axis. The opposit is the case for the horizontal bar charts.
@@ -3889,6 +3889,14 @@
 <h4 style='position: relative;left:100px'>Lampe Aussenwand</h4>
 <div id='histo3' style='position: relative;left:75px;display:inline-block;width: 45%;'></div>
 
+
+
+<h1 style='text-align: center;'>Zonen Übergänge</h1>
+<p style='position: relative;left:100px;width: 80%'>
+    TODO
+    <br> d/n
+    <br> 24h
+</p>
 <!--
 <div style='text-align:left '>
     <div id='ringS0' style='position: relative;left:50px;display:inline-block;width: 45%;'></div>
@@ -3899,6 +3907,7 @@
 <div id='ring1' style='position: relative;left:50px'></div>
 <div id='ring2' style='position: relative;left:50px'></div>
 <div id='ring3' style='position: relative;left:50px'></div>
+
 <script>
     dataCheck();
     enterButton(0)
