change color of group mode

--- a/pages/index_questionnaire.html
+++ b/pages/index_questionnaire.html
@@ -221,7 +221,7 @@
     <button type="button" id='tog11sp'>Single/Pairs</button>
     <button type="button" id='tog11g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qone_2' placeholder="Group 2"> </select>
 </div>
@@ -246,7 +246,7 @@
     <button type="button" id='tog12sp'>Single/Pairs</button>
     <button type="button" id='tog12g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonetwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonetwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qonetwo_2' placeholder="Group 2"> </select>
 </div>
@@ -286,7 +286,7 @@
     <button type="button" id='tog13sp'>Single/Pairs</button>
     <button type="button" id='tog13g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonethree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonethree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qonethree_2' placeholder="Group 2"> </select>
 </div>
@@ -306,7 +306,7 @@
     <button type="button" id='tog14sp'>Single/Pairs</button>
     <button type="button" id='tog14g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonefour_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonefour_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qonefour_2' placeholder="Group 2"> </select>
 </div>
@@ -358,7 +358,7 @@
     <button type="button" id='tog16sp'>Single/Pairs</button>
     <button type="button" id='tog16g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonesix_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qonesix_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qonesix_2' placeholder="Group 2"> </select>
 </div>
@@ -380,7 +380,7 @@
         <button type="button" id='tog17sp'>Single/Pairs</button>
         <button type="button" id='tog17g'>Custom (Apply)</button><br>
 
-        <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneseven_1' placeholder="Group 1"> </select>
+        <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneseven_1' placeholder="Group 1"> </select>
 
         <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneseven_2' placeholder="Group 2"> </select>
     </div>
@@ -421,7 +421,7 @@
 
     <br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneeightone_2' placeholder="Group 2"> </select>
 </div>
@@ -458,7 +458,7 @@
     <button type="button" id='tog182sp'>Single/Pairs</button>
     <button type="button" id='tog182g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeighttwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeighttwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneeighttwo_2' placeholder="Group 2"> </select>
 </div>
@@ -497,7 +497,7 @@
     <button type="button" id='tog183sp'>Single/Pairs</button>
     <button type="button" id='tog183g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightthree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightthree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneeightthree_2' placeholder="Group 2"> </select>
 </div>
@@ -535,7 +535,7 @@
     <button type="button" id='tog184sp'>Single/Pairs</button>
     <button type="button" id='tog184g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightfour_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightfour_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneeightfour_2' placeholder="Group 2"> </select>
 </div>
@@ -573,7 +573,7 @@
     <button type="button" id='tog185sp'>Single/Pairs</button>
     <button type="button" id='tog185g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightfive_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qoneeightfive_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qoneeightfive_2' placeholder="Group 2"> </select>
 </div>
@@ -613,7 +613,7 @@
     <button type="button" id='tog211sp'>Single/Pairs</button>
     <button type="button" id='tog211g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwooneone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwooneone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwooneone_2' placeholder="Group 2"> </select>
 </div>
@@ -633,7 +633,7 @@
     <button type="button" id='tog212sp'>Single/Pairs</button>
     <button type="button" id='tog212g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwoonetwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwoonetwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwoonetwo_2' placeholder="Group 2"> </select>
 </div>
@@ -653,7 +653,7 @@
     <button type="button" id='tog22sp'>Single/Pairs</button>
     <button type="button" id='tog22g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwotwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwotwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwotwo_2' placeholder="Group 2"> </select>
 </div>
@@ -693,7 +693,7 @@
     <button type="button" id='tog231sp'>Single/Pairs</button>
     <button type="button" id='tog231g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreeone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreeone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreeone_2' placeholder="Group 2"> </select>
 </div>
@@ -730,7 +730,7 @@
     <button type="button" id='tog232sp'>Single/Pairs</button>
     <button type="button" id='tog232g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreetwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreetwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreetwo_2' placeholder="Group 2"> </select>
 </div>
@@ -768,7 +768,7 @@
     <button type="button" id='tog233sp'>Single/Pairs</button>
     <button type="button" id='tog233g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreethree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreethree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreethree_2' placeholder="Group 2"> </select>
 </div>
@@ -805,7 +805,7 @@
     <button type="button" id='tog234sp'>Single/Pairs</button>
     <button type="button" id='tog234g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreefour_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreefour_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreefour_2' placeholder="Group 2"> </select>
 </div>
@@ -842,7 +842,7 @@
     <button type="button" id='tog235sp'>Single/Pairs</button>
     <button type="button" id='tog235g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreefive_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreefive_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreefive_2' placeholder="Group 2"> </select>
 </div>
@@ -880,7 +880,7 @@
     <button type="button" id='tog236sp'>Single/Pairs</button>
     <button type="button" id='tog236g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreesix_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwothreesix_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwothreesix_2' placeholder="Group 2"> </select>
 </div>
@@ -919,7 +919,7 @@
     <button type="button" id='tog24sp'>Single/Pairs</button>
     <button type="button" id='tog24g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwofour_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwofour_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwofour_2' placeholder="Group 2"> </select>
 </div>
@@ -961,7 +961,7 @@
     <button type="button" id='tog26sp'>Single/Pairs</button>
     <button type="button" id='tog26g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwosix_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qtwosix_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qtwosix_2' placeholder="Group 2"> </select>
 </div>
@@ -984,7 +984,7 @@
     <button type="button" id='tog31sp'>Single/Pairs</button>
     <button type="button" id='tog31g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreeone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreeone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qthreeone_2' placeholder="Group 2"> </select>
 </div>
@@ -1026,7 +1026,7 @@
     <button type="button" id='tog32sp'>Single/Pairs</button>
     <button type="button" id='tog32g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreetwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreetwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qthreetwo_2' placeholder="Group 2"> </select>
 </div>
@@ -1068,7 +1068,7 @@
     <button type="button" id='tog33sp'>Single/Pairs</button>
     <button type="button" id='tog33g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreethree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qthreethree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qthreethree_2' placeholder="Group 2"> </select>
 </div>
@@ -1117,7 +1117,7 @@
     <button type="button" id='tog51g'>Custom (Apply)</button>
     <br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qfiveone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qfiveone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qfiveone_2' placeholder="Group 2"> </select>
 </div>
@@ -1160,7 +1160,7 @@
     <button type="button" id='tog53sp'>Single/Pairs</button>
     <button type="button" id='tog53g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qfivethree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qfivethree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qfivethree_2' placeholder="Group 2"> </select>
 </div>
@@ -1205,7 +1205,7 @@
     <button type="button" id='tog61sp'>Single/Pairs</button>
     <button type="button" id='tog61g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixone_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixone_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixone_2' placeholder="Group 2"> </select>
 </div>
@@ -1244,7 +1244,7 @@
     <button type="button" id='tog62sp'>Single/Pairs</button>
     <button type="button" id='tog62g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixtwo_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixtwo_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixtwo_2' placeholder="Group 2"> </select>
 </div>
@@ -1283,7 +1283,7 @@
     <button type="button" id='tog63sp'>Single/Pairs</button>
     <button type="button" id='tog63g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixthree_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixthree_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixthree_2' placeholder="Group 2"> </select>
 </div>
@@ -1322,7 +1322,7 @@
     <button type="button" id='tog64sp'>Single/Pairs</button>
     <button type="button" id='tog64g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixfour_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixfour_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixfour_2' placeholder="Group 2"> </select>
 </div>
@@ -1361,7 +1361,7 @@
     <button type="button" id='tog65sp'>Single/Pairs</button>
     <button type="button" id='tog65g'>Custom (Apply)</button><br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixfive_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixfive_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixfive_2' placeholder="Group 2"> </select>
 </div>
@@ -1400,7 +1400,7 @@
     <button type="button" id='tog66sp'>Single/Pairs</button>
     <button type="button" id='tog66g'>Custom (Apply)</button> <br>
 
-    <label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixsix_1' placeholder="Group 1"> </select>
+    <br><label>Group 1 </label><select multiple="multiple" class='multiselector_1 Qsixsix_1' placeholder="Group 1"> </select>
 
     <label>Group 2 </label><select multiple="multiple" class='multiselector_2 Qsixsix_2' placeholder="Group 2"> </select>
 </div>
