--- a/pages/index_questionnaire.html
+++ b/pages/index_questionnaire.html
@@ -201,8 +201,9 @@
 <p style='position: relative;left:100px;width: 80%'>
     This section illustrates the results of the questionnaires collected by the test-subjects. <br> The questions denoted with <b>(Y/N)</b> are yes or no questions, <b>(MC)</b> are multiple-choice questions and the questions <b>(W)</b> are questions that
     were written answeres. The written answeres are evaluated by counting how often generalized keywords were mentioned. The explanation of every keyword is displays on the right of the bar charts on click on the bars.
-    <br>Most charts show the option to view the results for all test-subjects (<b>All</b>) or grouped into single and pairs of test-subjects (<b>Single/Pairs</b>).
-    <br> For the vertical bar chart, the y axis shos the frequency of the answers, given by the x axis. The opposit is the case for the horizontal bar charts.
+    <br><br>Most charts show the option to view the results for all test-subjects (<b>All</b>) or grouped into single and pairs of test-subjects (<b>Single/Pairs</b>). Alternatively, two groups can be defined using the dropdown multiselect fields (<b>Custom (Apply)</b>).
+    After selection, once again click on the (<b>Custom (Apply)</b>) button for the graph to update. <br>
+    <br> For the vertical bar chart, the y axis shos the frequency of the answers, given by the x axis. The opposit is the case for the horizontal bar charts (for questions of type (W)).
     <br> As the questionnaire is in German, so are the answers. <br> As a reminder, the English translation of the elements are: (Drehwand - Rotatable Wall), (Drehschrank - Rotatable Closet), (Lampe Drehwand - Lamp A), (Lampe Aussenwand - Lamp B)
     <br><b>Some people did not fill out every question. The number of answeres given by singles/pairs my thus vary from question to question.</b>
 </p>
